[project]
name = "aioclock"
version = "0.1.0"
description = "An asyncio-based scheduling framework designed for execution of periodic task with integrated support for dependency injection, enabling efficient and flexible task management"
authors = [{ name = "Mani Mozaffar", email = "mani.mozaffar@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = ["pydantic>2.5,<3.0", "fast-depends>=2.4.2"]
license = 'MIT'


[project.urls]
repository = "https://github.com/ManiMozaffar/aioclock"
Homepage = 'https://github.com/ManiMozaffar/aioclock'
Documentation = 'https://github.com/ManiMozaffar/aioclock'
Source = 'https://github.com/ManiMozaffar/aioclock'


[project.optional-dependencies]
extras = ["fastapi"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
dev-dependencies = [
    "pytest>=7.2.0",
    "pytest-asyncio>=0.23.6",
    "tox>=4.11.1",
    "rich>=13.7.1",
    "pyright>=1.1.350",
    "mike==2.0.0",
    "pytest-asyncio>=0.23.7",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.7",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-simple-hooks>=0.1.5",
    "black>=24.4.2",
    "fastapi>=0.90",
    "ruff>=0.3.5",
]

[tool.behavior]
use-uv = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["aioclock"]


[tool.ruff]

lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []

lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
